<resources>
    <string name="app_name">O\'were</string>
    <string name="underLineTermsOfUse"><u>이용약관</u></string>
    <string name="ask_Email">이메일 주소를 입력해주세요</string>
    <string name="continue_process">계속하기</string>
    <string name="explain_owere">미용 서비스의\n시공간을 뛰어넘다</string>
    <string name="owere">OWERE</string>
    <string name="cannot_login">로그인이 안 되나요?</string>
    <string name="login_kakao">카카오톡로 로그인</string>
    <string name="login_facebook">페이스북로 로그인</string>
    <string name="login_email">이메일로 로그인</string>
    <string name="title_activity_login_restore">LoginActivityRestore</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="restore_handle">계정 복구</string>
    <string name="announce_send_email">계정 복구 링크가 담긴 이메일을 곧 보내드리겠습니다.</string>
    <string name="send_email">이메일 보내기</string>
    <string name="explain_back_to_login_arrow">로그인 화면으로 돌아가는 화살표 모양의 버튼</string>
    <string name="announce_write_correct_email">올바른 이메일 주소를 입력하세요.</string>
    <string name="icon_kakaotalk">Icon kakaotalk</string>
    <string name="icon_facebook">Icon facebook</string>
    <string name="icon_google">Icon google</string>

    <!-- user_home_designer_fragment -->
    <string name="favorite_designer">즐겨찾는 디자이너</string>
    <string name="available_now_designer">지금 가능한 디자이너</string>

    <!-- user_home_salon_fragment -->
    <string name="favorite_salon">즐겨찾는 미용실</string>
    <string name="login">로그인</string>

    <!--activity_design_profile -->
    <string name="chatting">채팅하기</string>
    <string name="reservation">예약하기</string>
    <string name="text_price_chart">가격표</string>
    <string name="text_review_please">후기를 남겨주세요</string>
    <string name="text_customer_review">고객리뷰</string>
    <string name="text_all_prices">가격 전체보기</string>
    <string name="text_all_reviews">리뷰 전체보기</string>
    <string name="report">신고</string>


    <string name="announce_check_email">계정에 등록된 이메일(Owere@naver.com)로\n메일이 발송되었습니다.\n잠시 후 이메일을 확인해주세요.</string>
    <string name="can_not_find_pairing_button"><u>I cant find pairing button</u></string>
    <string name="use_another_email"><u>다른 이메일 사용하기</u></string>
    <string name="restore_use_phone"><u>전화번호 사용하기</u></string>
    <string name="check_phone">휴대폰 확인</string>
    <string name="announce_register_phone_number">전화번호를 인증하면 나중에 편리하게 계정에 접\n속할 수 있으며, 인증하지 않으면 계정에 접속할 수\n없게 될 수 있습니다. 회원님의 전화번호는\nO’were 회원들에게 공유되지 않습니다.</string>

    <!--activity_portfolio-->
    <string name="portfolio">포트폴리오</string>

    <!--detailed_portfolio_fragment-->
    <string name="designer_home">디자이너 홈</string>

    <!--user_designer_item-->
    <!-- %[argument_index$]format_specifier -->
    <string name="matching_rate">매칭률 %d%%</string>\

    <!--activity_user_designer_profile-->
    <string name="see_all_prices">가격 전체보기</string>

    <!--designer_confirmed_reservation_fragment -->
    <string name="today">TODAY</string>
    <string name="text_today">%1$d월 %2$d일</string>
    <string name="scheduled_reservation">예정된 예약</string>
    <string name="completed_reservation">완료된 예약</string>
    <string name="total_reservation_count">전체 <font color="#00CCFF">%d</font>건</string>
    <string name="settling_fee"><font color="#FF0000">정산하기</font></string>
    <string name="settlement_completed_blue"><font color="#00CCFF">정산완료</font></string>
    <string name="reservation_time">%1$s ~ %2$s</string>

    <!--activity_designer_reservation_detail-->
    <string name="reservation_information">예약 정보</string>
    <string name="dates">날짜</string>
    <string name="time">시간</string>
    <string name="designer">디자이너</string>
    <string name="shop">미용실</string>
    <string name="menu_type">메뉴 종류</string>
    <string name="menu_price">메뉴 가격</string>
    <string name="total_price">상품합계</string>
    <string name="discount_amount">할인금액</string>
    <string name="coupon_discount">쿠폰 할인</string>
    <string name="using_point">포인트 사용</string>
    <string name="payment_amount">결제금액</string>
    <string name="payment_method">결제방법</string>
    <string name="customer_request">고객의 당부사항</string>
    <string name="has_additional_treatment">추가 시술이 있었나요?</string>
    <string name="settlement_completed">정산완료</string>
    <string name="choice_completed">선택완료</string>
    <string name="zero_won">0원</string>

    <string name="firebase_web_client_id">"260202805759-p5ff8qashfb05ab9p13ui7f329326h6b.apps.googleusercontent.com"</string>
    <string name="logo_of_owere">Logo of Owere</string>
    <string name="title_activity_designer_profile">DesignerProfileActivity</string>

    <!-- activity_designer_profile -->
    <string name="edit_profile">프로필 수정</string>
    <string name="edit_price_chart">가격표 수정</string>

    <!-- activity_edit_designer_profile -->
    <string name="cancel">취소</string>
    <string name="complete">완료</string>
    <string name="name">이름</string>
    <string name="area">위치</string>
    <string name="introduce_myself">자기소개</string>

    <string name="sign_up">회원가입</string>
    <string name="choose_customer_or_designer">고객, 디자이너를\n선택해주세요</string>
    <string name="customer">고객</string>

    <!-- activity_edit_designer_portfolio -->
    <string name="edit_style">스타일 수정</string>
</resources>