<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".user.activity.loginActivity.LoginActivityRestore">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/restore_handle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginStart="16dp"
                android:text="@string/restore_handle"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/left_arrow" />

            <ImageView
                android:id="@+id/left_arrow"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="44dp"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/black"
                android:contentDescription="@string/explain_back_to_login_arrow" />

            <!--이메일 주소를 입력해 주세요-->
            <EditText
                android:id="@+id/input_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="69dp"
                android:hint="@string/ask_Email"
                android:textColor="@color/gray_cc"
                android:textColorHint="@color/gray_cc"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/restore_handle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="100dp"
                android:text="@string/announce_send_email"
                android:textColor="@color/gray_cc"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@id/input_email"
                app:layout_constraintTop_toBottomOf="@id/input_email"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_black_fill_white_background"
        android:backgroundTint="@color/purple_button"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/send_email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
