<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.activity.loginActivity.LoginActivityCheckEmail">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_go_back"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/explain_back_to_login_arrow"
        android:scaleType="centerCrop"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/check_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="이메일을 확인하세요"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_go_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/announce_check_email"
        android:textAlignment="center"
        android:textColor="@color/gray_939393"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:text="링크를 못 받으셨나요?"
        android:textColor="@color/gray_939393"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_email" />

    <TextView
        android:id="@+id/another_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/use_another_email"
        android:textColor="@color/gray_484C4F"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_email" />

    <TextView
        android:id="@+id/use_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="413dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/restore_use_phone"
        android:textColor="@color/gray_484C4F"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_email" />


</androidx.constraintlayout.widget.ConstraintLayout>