<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageButton
                android:id="@+id/button_designer_reservation_detail_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_chevron_left_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <ImageButton
                android:id="@+id/button_designer_reservation_detail_menu"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_menu_48"
                app:layout_constraintBottom_toBottomOf="@id/button_designer_reservation_detail_back"
                app:layout_constraintDimensionRatio="w, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/button_designer_reservation_detail_back"
                app:tint="@color/black" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:text="박성준님"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <include layout="@layout/view_divider_5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/reservation_information"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp">

            <TextView
                android:id="@+id/text_designer_reservation_detail_dates_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dates"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation_information"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/text_designer_reservation_detail_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.27"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_designer_reservation_detail_time" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reservation_information"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/text_designer_reservation_detail_dates"
                app:layout_constraintTop_toBottomOf="@id/text_designer_reservation_detail_dates" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designer"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_designer_reservation_detail_designer" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_designer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reservation_information"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/text_designer_reservation_detail_dates"
                app:layout_constraintTop_toBottomOf="@id/text_designer_reservation_detail_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_designer_reservation_detail_shop" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reservation_information"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/text_designer_reservation_detail_dates"
                app:layout_constraintTop_toBottomOf="@id/text_designer_reservation_detail_designer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_type"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_designer_reservation_detail_menu" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reservation_information"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/text_designer_reservation_detail_dates"
                app:layout_constraintTop_toBottomOf="@id/text_designer_reservation_detail_shop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_price"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_designer_reservation_detail_price" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reservation_information"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/text_designer_reservation_detail_dates"
                app:layout_constraintTop_toBottomOf="@id/text_designer_reservation_detail_menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/view_divider_1dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="35,000원"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/view_divider_1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/discount_amount"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coupon_discount"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-3,000원"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/using_point"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_designer_reservation_detail_point" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="0원"
                android:textColor="@color/gray_cc"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_designer_reservation_detail_coupon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/view_divider_1dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_amount"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_total_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="32,000원"
                android:textColor="@color/purple_button2"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/view_divider_1dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_method"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_designer_reservation_detail_total_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="신용카드/KB국민카드"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/view_divider_1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/customer_request"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@drawable/rounded_square_background"
            android:backgroundTint="@color/gray_background"
            android:gravity="center_vertical"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:text="안녕하세요. 김철수 디자이너님! 이번에 C컬펌을 예약한 사람인데 다름이 아니라 제가 추가로 염색도 하고 싶은데 가능할까요? 직접 미용실에서 시술 받을 때 추가로 결제할게요~"
            android:textColor="@color/gray_cc"
            android:textSize="12sp" />

        <LinearLayout
            android:id="@+id/layout_designer_reservation_detail_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingVertical="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_designer_reservation_detail_additional_treatment"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/round_black_background_100"
                android:text="@string/has_additional_treatment"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_designer_reservation_detail_settle"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_white_background"
                android:backgroundTint="@color/purple_button2"
                android:text="@string/settlement_completed"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_designer_reservation_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</ScrollView>